# varint-bench

./: Cargo.toml  LICENSE  README.md
benches/: varint.rs
src/: lib.rs
