[package]
name = "varint-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"

[dev-dependencies]
unsigned-varint = { version = "0.7.1", features = ["std"] }
criterion = "0.4.0"

[[bench]]
name = "varint"
harness = false
