[package]
name = "varint-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
unsigned-varint = { version = "0.7.1", features = ["std"] }

[[bench]]
name = "varint"
harness = false
